// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUICompositionDetailHeader> renders basic example 1`] = `
<div
  className="xui-composition xui-composition-is-finite xui-composition-has-grid-gap xui-composition-has-auto-space-around xui-composition-detailheader"
>
  <div
    className="xui-gridarea-header"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-detail"
  >
    <div />
  </div>
</div>
`;

exports[`<XUICompositionDetailHeader> should do nothing with children 1`] = `
<div
  className="xui-composition xui-composition-is-finite xui-composition-has-grid-gap xui-composition-has-auto-space-around xui-composition-detailheader"
>
  <div
    className="xui-gridarea-header"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-detail"
  >
    <div />
  </div>
</div>
`;

exports[`<XUICompositionDetailHeader> should include custom class and toggle off default classes, if specified 1`] = `
<div
  className="xui-composition xui-composition-detailheader single-with-head"
>
  <div
    className="xui-gridarea-header"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-detail"
  >
    <div />
  </div>
</div>
`;
